# senorBelly

./: .gitignore  main.py  pyproject.toml
app/: __init__.py  app.py  database.py
app/controllers/: debt_controller.py  receivable_controller.py  user_controller.py
app/models/: debt.py  receivable.py  user.py
database/: docker-compose.yaml
docs/: database_setup_guide.md  patterns.md
tests/: __init__.py  conftest.py  test_database.py  test_debts.py  test_receivables.py  test_users.py
