[project]
name = "senorbelly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "flask>=3.1.3",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pytest-env>=1.6.0",
]
